# space-war

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/game_lib/: Game.hpp
include/logging/: Logger.hpp
src/: CMakeLists.txt
src/game_lib/: CMakeLists.txt  Game.cpp
src/logging/: CMakeLists.txt  Logger.cpp
